# world-id-protocol

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  .release-please-manifest.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Justfile  LICENSE  Makefile  README.md  bench-config.android.toml  bench-config.ios.toml  bench-config.toml  check-db.sh  cliff.toml  config.json  deny.toml  device-matrix.android.low-spec.yaml  device-matrix.ios.low-spec.yaml  device-matrix.yaml  docker-compose.benchmark.yml  docker-compose.yml  flake.nix  justfile  local-setup.sh  release-please-config.json  release-plz.toml  run-indexer-stage.sh  run-request.sh  rust-toolchain.toml  test-create-account.sh  vercel.json  xtask.toml
contract-monitor-staged/: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  rust-toolchain.toml
contract-monitor-staged/config/: example.toml
contract-monitor-staged/deploy/: values-contract-monitor-stage.yaml
contract-monitor-staged/deploy/prod/: values-contract-monitor-prod.yaml
contract-monitor-staged/github-workflows/: build-and-push.yml  ci.yml
contract-monitor-staged/src/: config.rs  health.rs  main.rs  subscription.rs  tests.rs
crates/authenticator/: Cargo.toml  README.md
crates/authenticator/abi/: WorldIDRegistryAbi.json  WorldIDRegistryV2Abi.json
crates/authenticator/src/: account.rs  api_types.rs  authenticator.rs  error.rs  init.rs  lib.rs  ohttp.rs  prove.rs  recovery.rs  registry.rs  service_client.rs  traits.rs  types.rs
crates/authenticator/tests/: ohttp_authenticator_integration.rs  ohttp_integration.rs
crates/common/: Cargo.toml  build.rs
crates/common/src/: authenticator.rs  authenticator_registry.rs  authenticator_signer.rs  lib.rs
crates/core/: Cargo.toml  README.md  build.rs
crates/core/examples/: authenticator.rs  issuer.rs
crates/core/src/: account_registry.rs  authenticator.rs  config.rs  contracts.rs  credential.rs  issuer.rs  issuer_auth.rs  lib.rs  nullifier.rs  proof.rs  signer.rs  types.rs  util.rs  world_id_registry.rs
crates/core/tests/: authenticator_registration.rs  e2e_authenticator_generate_proof.rs  e2e_authenticator_generate_proof_oprf_nodes.rs  e2e_authenticator_insert_update_remove.rs  e2e_proof_generation_nullifier.rs  generate_proof.rs  issuer_authentication.rs  issuer_registration.rs  nullifier_proof_generation.rs
crates/credential/: Cargo.toml  README.md
crates/credential/src/: lib.rs
crates/idkit-core/: Cargo.toml
crates/idkit-core/src/: action.rs  constraints.rs  lib.rs  model.rs
crates/idkit-core/test/: examples.rs
crates/issuer/: Cargo.toml  README.md
crates/issuer/src/: issuer.rs  lib.rs
crates/oprf-client/: Cargo.toml
crates/oprf-client/src/: lib.rs  nonblocking.rs
crates/oprf-client/tests/: e2e_nullifier.rs
crates/oprf-core/: Cargo.toml
crates/oprf-core/benches/: oprf.rs
crates/oprf-core/src/: ddlog_equality.rs  ddlog_equality_shamir.rs  dlog_equality.rs  lib.rs  oprf.rs  shamir.rs
crates/oprf-world-types/: Cargo.toml
crates/oprf-world-types/src/: api.rs  groth16.rs  lib.rs
crates/oprf-zk/: Cargo.toml
crates/oprf-zk/src/: groth16_serde.rs  lib.rs
crates/poseidon2/: Cargo.toml  LICENSE  Readme.md
crates/poseidon2/benches/: poseidon2.rs
crates/poseidon2/src/: lib.rs  merkle_tree.rs  params.rs  poseidon2.rs
crates/primitives/: Cargo.toml  README.md
crates/primitives-types/: Cargo.toml
crates/primitives-types/src/: credential.rs  error.rs  field_element.rs  lib.rs  public_key_bytes.rs  signature_bytes.rs
crates/primitives/src/: action.rs  api_types.rs  authenticator.rs  circuit_inputs.rs  config.rs  credential.rs  key_set.rs  lib.rs  merkle.rs  nullifier.rs  oprf.rs  proof.rs  rp.rs  rp_signature.rs  serde_utils.rs  session.rs  signer.rs  sponge.rs
crates/proof/: Cargo.toml  README.md  build.rs
crates/proof/src/: circuit_inputs.rs  compress.rs  credential_blinding_factor.rs  lib.rs  nullifier.rs  nullifier_proof.rs  oprf_query.rs  ownership_proof.rs  passkey_ownership_proof.rs  proof.rs
crates/registries/: Cargo.toml  README.md
crates/registries/abi/: WorldIDRegistryAbi.json  WorldIDRegistryV2Abi.json
crates/registries/src/: lib.rs  world_id.rs
crates/registry/: Cargo.toml  README.md
crates/registry/src/: lib.rs  registry.rs
crates/request/: Cargo.toml  README.md
crates/request/src/: lib.rs
crates/signer/: Cargo.toml  README.md
crates/signer/src/: lib.rs
crates/solana-satellite/: Cargo.toml  README.md
crates/solana-satellite/src/: lib.rs
crates/solana-verifier/: Cargo.toml
crates/solana-verifier/src/: lib.rs
crates/test-utils/: Cargo.toml  build.rs
crates/test-utils/src/: anvil.rs  fixtures.rs  lib.rs  merkle.rs  stubs.rs  test_secret_manager.rs
crates/types/: Cargo.toml  README.md
crates/types/src/: authenticator.rs  credential.rs  lib.rs  merkle.rs  proof.rs  rp.rs  types.rs
crates/world-id/: Cargo.toml  README.md
crates/world-id-core/: Cargo.toml  build.rs
crates/world-id-core/src/: account_registry.rs  account_signer.rs  authenticator.rs  authenticator_registry.rs  config.rs  credential.rs  issuer.rs  lib.rs  primitives.rs  signer.rs  types.rs
crates/world-id-core/tests/: authenticator_registration.rs  issuer_registration.rs
crates/world-id/src/: lib.rs
crates/zk-mobile-bench/: Cargo.toml  bench-config.android.toml  bench-config.ios.toml  bench-config.toml  device-matrix.ios.low-spec.yaml  device-matrix.yaml
crates/zk-mobile-bench/docs/: README.md  benchmark-functions.md  ci-browserstack.md  ci-pipeline-detailed.md
crates/zk-mobile-bench/examples/: run_local.rs
crates/zk-mobile-bench/scripts/: summarize_mobench_ci.py
crates/zk-mobile-bench/src/: fixtures.rs  lib.rs
services/authtree-indexer/: .env.example  Cargo.toml  README.md
services/authtree-indexer/migrations/: 0001_init.sql
services/authtree-indexer/src/: config.rs  lib.rs  main.rs
services/billing/: .env.example  Cargo.toml  README.md
xtask/: Cargo.toml
xtask/src/: anvil.rs  bindings.rs  bootstrap.rs  fuzz.rs  invariants.rs  main.rs  relay_harness.rs  telemetry.rs
(+1024 files in other folders)
