[workspace]
members = [
    "crates/core",
    "crates/issuer",
    "crates/credential",
    "crates/primitives",
    "crates/test-utils",
    "services/indexer",
    "services/gateway",
    "services/oprf-node",
    "services/oprf-dev-client",
    "services/common",
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.3.0"
license = "MIT"
authors = [
    "World Foundation",
    "TACEO GmbH <hello@taceo.io>",
    "Tools for Humanity",
]
homepage = "https://docs.world.org/world-id"
repository = "https://github.com/worldcoin/world-id-protocol"
rust-version = "1.87"

[workspace.dependencies]
alloy = { version = "1.5", default-features = false }
anyhow = "1"
ark-ec = "0.5"
ark-babyjubjub = { package = "taceo-ark-babyjubjub", version = "0.5" }
ark-serde-compat = { package = "taceo-ark-serde-compat", version = "0.2", default-features = false, features = [
    "babyjubjub",
] }
ark-bn254 = "0.5"
ark-ff = "0.5"
ark-groth16 = "0.5"
ark-serialize = "0.5"
backon = "1"
circom-witness-rs = "0.2.1"
circom-types = { package = "taceo-circom-types", version = "=0.1.1", default-features = false }
criterion = "0.7"
eddsa-babyjubjub = { package = "taceo-eddsa-babyjubjub", version = "0.5" }
eyre = "0.6"
futures = "0.3"
groth16-material = { package = "taceo-groth16-material", version = "0.1", default-features = false }
hex = { version = "0.4" }
itertools = "0.14"
k256 = { version = "0.13" }
num-bigint = "0.4"
taceo-groth16-sol = { version = "0.1" }
taceo-oprf = { version = "0.1", default-features = false }
taceo-oprf-core = { version = "0.4", default-features = false }
taceo-oprf-types = { version = "0.5", default-features = false }
taceo-oprf-test-utils = "0.1"
taceo-oprf-key-gen = "0.1"
ruint = { version = "1.17", features = ["ark-ff-05"] }
poseidon2 = { package = "taceo-poseidon2", version = "0.1" }
rand = "0.8"
rand_chacha = "0.3"
rustls = "0.23"
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha3 = "0.10"
strum = { version = "0.27", features = ["derive"] }
thiserror = "1"
tokio = { version = "1", default-features = false }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = { version = "2", features = ["serde"] }
utoipa = "5"
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }
uuid = { version = "1" }
webpki-roots = "1.0"
zeroize = "1"
axum = { version = "0.8", features = ["macros", "json"] }
moka = { version = "0.12.12", features = ["future"] }
metrics = "0.24"
secrecy = "0.10"

# Internal
world-id-core = { version = "0.3.0", default-features = false, path = "crates/core" }
world-id-issuer = { version = "0.3.0", path = "crates/issuer" }
world-id-credential = { version = "0.3.0", path = "crates/credential" }
world-id-primitives = { version = "0.3.0", path = "crates/primitives" }
world-id-oprf-node = { version = "0.1", path = "./services/oprf-node" }

[patch.crates-io]
taceo-oprf = { version = "0.1", git = "https://github.com/TaceoLabs/oprf-service.git", rev = "b3b95bf" }
taceo-oprf-test-utils = { version = "0.1", git = "https://github.com/TaceoLabs/oprf-service.git", rev = "b3b95bf" }
taceo-oprf-key-gen = { version = "0.1", git = "https://github.com/TaceoLabs/oprf-service.git", rev = "b3b95bf" }
