[workspace]
members = [
  "crates/core",
  "crates/authenticator",
  "crates/issuer",
  "crates/proof",
  "crates/primitives",
  "crates/test-utils",
  "services/indexer",
  "services/gateway",
  "services/oprf-node",
  "services/oprf-dev-client",
  "services/common",
  "services/faux-issuer",
  "tools/generate-solidity-fixtures",
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.4.5"
license = "MIT"
authors = [
  "World Foundation",
  "TACEO GmbH <hello@taceo.io>",
  "Tools for Humanity",
]
homepage = "https://docs.world.org/world-id"
repository = "https://github.com/worldcoin/world-id-protocol"
rust-version = "1.87"

[workspace.dependencies]
# alloy
alloy = { version = "1.7.3", default-features = false }
alloy-primitives = { version = "1.5.6", default-features = false }
alloy-node-bindings = "1.0.42"

anyhow = "1"
ark-ec = "0.5"
ark-babyjubjub = { package = "taceo-ark-babyjubjub", version = "0.5" }
ark-serde-compat = { package = "taceo-ark-serde-compat", version = "0.4.1", default-features = false, features = [
  "babyjubjub",
] }
ark-bn254 = "0.5"
ark-ff = "0.5"
ark-groth16 = "0.5"
ark-serialize = "0.5"
backon = "1"
circom-types = { package = "taceo-circom-types", version = "0.2", default-features = false }
criterion = "0.8"
eddsa-babyjubjub = { package = "taceo-eddsa-babyjubjub", version = "0.5.4" }
eyre = "0.6"
futures = "0.3"
groth16-material = { package = "taceo-groth16-material", version = "0.2.3", default-features = false }
hex = { version = "0.4" }
itertools = "0.14"
k256 = { version = "0.13" }
num-bigint = "0.4"
taceo-groth16-sol = { version = "0.2.2" }
taceo-oprf = { version = "0.7", default-features = false }
taceo-oprf-test-utils = { version = "0.7", default-features = false }
taceo-oprf-key-gen = { version="0.6"}
telemetry-batteries = "0.2"
ruint = { version = "1.17", features = ["ark-ff-05"] }
poseidon2 = { package = "taceo-poseidon2", version = "0.2" }
rand = "0.8"
rand_chacha = "0.3"
rustls = { version = "0.23", features = ["ring"] }
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha3 = { version = "0.10", default-features = false }
strum = { version = "0.27", features = ["derive"] }
thiserror = "2"
tokio = { version = "1", default-features = false }
tower-http = { version = "0.6", features = ["trace", "timeout"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = { version = "2", features = ["serde"] }
utoipa = "5"
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "rustls-tls",
] }
uuid = { version = "1" }
webpki-roots = "1.0"
zeroize = "1"
zstd = "0.13"
axum = { version = "0.8", features = ["macros", "json"] }
moka = { version = "0.12.13", features = ["future"] }
metrics = "0.24"
secrecy = "0.10"
mockito = "1"
ciborium = "0.2"
arrayvec = "0.7"
async-trait = "0.1"
aws-config = "1"
aws-sdk-kms = "1"
chrono = "0.4"
clap = "4.5.59"
config = "0.15.19"
dotenvy = "0.15"
futures-util = "0.3"
getrandom = "0.2"
governor = "0.10.4"
http = "1"
humantime = "2"
once_cell = "1"
rayon = "1.11"
redis = "1"
regex = "1"
semaphore-rs-hasher = "0.5.0"
semaphore-rs-trees = "0.5.0"
semaphore-rs-storage = "0.5.0"
serial_test = "3"
sqlx = "0.8"
take_mut = "0.2.2"
tar = "0.4"
taceo-nodes-common = "0.2.1"
taceo-nodes-observability = "0.1"
tempfile = "3"
tokio-util = "0.7"
tower = "0.5.3"

# Internal
world-id-core = { version = "0.4.5", default-features = false, path = "crates/core" }
world-id-issuer = { version = "0.4.5", path = "crates/issuer" }
world-id-proof = { version = "0.4.5", path = "crates/proof" }
world-id-authenticator = { version = "0.4.5", path = "crates/authenticator" }
world-id-primitives = { version = "0.4.5", path = "crates/primitives", default-features = false }
world-id-oprf-node = { version = "0.1.0", path = "services/oprf-node" }
world-id-test-utils = { version = "0.1.0", path = "crates/test-utils" }
world-id-services-common = { path = "services/common" }
