[workspace]
members = [
  "crates/core",
  "crates/authenticator",
  "crates/issuer",
  "crates/proof",
  "crates/primitives",
  "crates/registries",
  "crates/test-utils",
  "services/indexer",
  "services/gateway",
  "services/oprf-node",
  "services/oprf-dev-client",
  "services/common",
  "services/faux-issuer",
  "tools/generate-solidity-fixtures",
  "services/relay",
]

resolver = "2"

[workspace.package]
edition = "2024"
version = "0.10.0"
license = "MIT"
authors = [
  "World Foundation",
  "TACEO GmbH <hello@taceo.io>",
  "Tools for Humanity",
]
homepage = "https://docs.world.org/world-id"
repository = "https://github.com/worldcoin/world-id-protocol"
rust-version = "1.91"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }

[workspace.lints.rust]
missing_docs = "deny"
dead_code = "deny"
unused_crate_dependencies = "deny"

[workspace.dependencies]
# alloy
alloy = { version = "2.0.1", default-features = false }
alloy-primitives = { version = "1.5.7", default-features = false }
alloy-node-bindings = "2.0.1"

anyhow = "1"
ark-ec = "0.5"
ark-babyjubjub = { package = "taceo-ark-babyjubjub", version = "0.5" }
ark-serde-compat = { package = "taceo-ark-serde-compat", version = "0.5", default-features = false, features = [
  "babyjubjub",
] }
ark-bn254 = "0.5"
ark-ff = "0.5"
ark-groth16 = "0.5"
ark-serialize = "0.5"
backon = "1"
base64 = "0.22"
circom-types = { package = "taceo-circom-types", version = "0.2", default-features = false }
eddsa-babyjubjub = { package = "taceo-eddsa-babyjubjub", version = "0.5.5" }
eyre = "0.6"
futures = "0.3"
groth16-material = { package = "taceo-groth16-material", version = "0.3", default-features = false }
hex = { version = "0.4" }
ohttp = { version = "0.7", default-features = false }
bhttp = "0.7"
itertools = "0.14"
k256 = { version = "0.13" }
sha2 = { version = "0.11", default-features = false }
taceo-groth16-sol = { version = "0.3.1" }
taceo-oprf = { version = "0.13.0", default-features = false }
taceo-oprf-test-utils = { version = "0.11", default-features = false }
telemetry-batteries = "0.2"
ruint = { version = "1.17", features = ["ark-ff-05"] }
poseidon2 = { package = "taceo-poseidon2", version = "0.2" }
rand = "0.8"
rand_chacha = "0.3"
rustls = { version = "0.23", features = ["ring"] }
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha3 = { version = "0.10", default-features = false }
strum = { version = "0.27", features = ["derive"] }
thiserror = "2"
tokio = { version = "1", default-features = false }
tower-http = { version = "0.6", features = ["trace", "timeout"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = { version = "2", features = ["serde"] }
utoipa = "5"
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "rustls-tls-webpki-roots",
] }
uuid = { version = "1" }
webpki-roots = "1.0"
zeroize = "1"
zstd = "0.13"
axum = { version = "0.8", features = ["macros", "json"] }
moka = { version = "0.12.13", features = ["future"] }
dashmap = { version = "6.1.0" }
parking_lot = { version = "0.12.5"}
metrics = "0.24"
secrecy = "0.10"
mockito = "1"
ciborium = "0.2"
arrayvec = "0.7"
async-trait = "0.1"
aws-config = "1"
aws-sdk-kms = { version = "1", default-features = false, features = ["default-https-client", "rt-tokio", "behavior-version-latest"] }
chrono = "0.4"
clap = "4.5.59"
config = "0.15.19"
dotenvy = "0.15"
futures-util = "0.3"
getrandom = "0.2"
governor = "0.10.4"
http = "1"
humantime = "2"
humantime-serde = "1"
once_cell = "1"
provekit-common = { version = "0.1.4" }
provekit-prover = { version = "0.1.4" }
provekit-verifier = { version = "0.1.4" }
provekit-r1cs-compiler = { version = "0.1.4" }
rayon = "1.11"
redis = "1"
regex = "1"
semaphore-rs-hasher = "0.5.0"
semaphore-rs-trees = "0.5.0"
semaphore-rs-storage = "0.5.0"
serial_test = "3"
testcontainers = { version = "0.27", features = ["http_wait_plain", "host-port-exposure"] }
testcontainers-modules = { version = "0.15", features = ["redis"] }
sqlx = "0.8"
take_mut = "0.2.2"
tar = "0.4"
taceo-nodes-common = { version = "0.5.1", default-features=false }
taceo-nodes-observability = "0.1"
tempfile = "3"
tokio-util = "0.7"
tempo-alloy = "1.6"
tower = "0.5.3"

# Internal
world-id-core = { version = "0.10.0", default-features = false, path = "crates/core" }
world-id-issuer = { version = "0.10.0", path = "crates/issuer" }
world-id-proof = { version = "0.10.0", path = "crates/proof" }
world-id-registries = { version = "0.10.0", path = "crates/registries" }
world-id-authenticator = { version = "0.10.0", path = "crates/authenticator" }
world-id-primitives = { version = "0.10.0", path = "crates/primitives", default-features = false }
world-id-oprf-node = { version = "0.1.0", path = "services/oprf-node" }
world-id-test-utils = { path = "crates/test-utils" }
world-id-services-common = { path = "services/common" }
world-id-relay = { path = "services/relay" }

# Compile all third-party dependencies with optimizations, even in dev/test builds.
# This is essential because arkworks-based zkey deserialization (used by
# taceo-oprf-key-gen) performs elliptic-curve point validation that is
# prohibitively slow at opt-level 0 (~94s for a 21MB proving key).
# With opt-level 2 the same deserialization completes in seconds.
[profile.dev.package."*"]
opt-level = 2

