[package]
name = "world-id-authenticator"
description = "World ID Credential crate"
publish = true
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
rust-version.workspace = true
repository.workspace = true
include = [
    "src/**/*",
    "tests/**/*",
    "abi/*",
    "Cargo.toml",
    "README.md",
]

[features]
default = ["embed-zkeys"]
embed-zkeys = ["world-id-proof/embed-zkeys"]
ohttp = ["dep:ohttp", "dep:bhttp", "dep:hex"]

[dependencies]
alloy = { workspace = true, features = [
  "sol-types",
  "reqwest",
  "reqwest-rustls-tls",
  "json",
  "network",
  "providers",
  "contract",
] }
anyhow = { workspace = true }
ark-babyjubjub = { workspace = true }
ark-serialize = { workspace = true }
groth16-material = { workspace = true }
reqwest = { workspace = true }
poseidon2 = { workspace = true }
eddsa-babyjubjub = { workspace = true }
eyre = { workspace = true }
world-id-primitives = { workspace = true }
secrecy = { workspace = true }
taceo-oprf = { workspace = true, features = ["client"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "net"] }
rand = { workspace = true }
backon = { workspace = true }
ruint = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

rustls = { workspace = true }
webpki-roots = { workspace = true }

# OHTTP (optional, behind "ohttp" feature flag)
ohttp = { workspace = true, optional = true, features = ["client", "rust-hpke"] }
bhttp = { workspace = true, optional = true }
hex = { workspace = true, optional = true }

# Internal
world-id-proof = { workspace = true }

[dev-dependencies]
axum = { workspace = true }
backon = { workspace = true }
hex = { workspace = true }
ruint = { workspace = true }
rand = { workspace = true }
mockito = { workspace = true }
