[package]
name = "world-id-authenticator"
description = "World ID Credential crate"
publish = true
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
rust-version.workspace = true
repository.workspace = true
include = [
    "src/**/*",
    "tests/**/*",
    "abi/*",
    "Cargo.toml",
    "README.md",
]

[features]
default = ["embed-zkeys"]
embed-zkeys = ["world-id-proof/embed-zkeys"]

[dependencies]
# Use WASM-safe base features only
alloy = { workspace = true, features = [
  "sol-types",
  "json",
  "network",
  "providers",
  "contract",
  "reqwest",
] }
anyhow = { workspace = true }
ark-babyjubjub = { workspace = true }
ark-serialize = { workspace = true }
groth16-material = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
poseidon2 = { workspace = true }
eddsa-babyjubjub = { workspace = true }
eyre = { workspace = true }
world-id-primitives = { workspace = true }
secrecy = { workspace = true }
taceo-oprf = { workspace = true, features = ["client"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros"] }
rand = { workspace = true }
backon = { workspace = true }
ruint = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

rustls = { workspace = true }
webpki-roots = { workspace = true }

# OHTTP
ohttp = { workspace = true, features = ["client", "rust-hpke"] }
bhttp = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }

# Internal
world-id-proof = { workspace = true, features = ["zk-ownership-prove"] }

# Native-only dependencies (not available on wasm32)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
alloy = { workspace = true, features = ["reqwest-rustls-tls"] }
reqwest = { workspace = true, features = ["rustls-tls"] }
tokio = { workspace = true, features = ["rt-multi-thread", "net"] }
rustls = { workspace = true }
webpki-roots = { workspace = true }

[dev-dependencies]
axum = { workspace = true }
backon = { workspace = true }
base64 = { workspace = true }
eyre = { workspace = true }
hex = { workspace = true }
ruint = { workspace = true }
rand = { workspace = true }
mockito = { workspace = true }
testcontainers = { workspace = true }
world-id-test-utils = { workspace = true }
