[package]
name = "common"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[[bin]]
name = "authenticator"
path = "bin/authenticator.rs"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
alloy = { version = "1.0.22", features = ["full"] }
eddsa-babyjubjub = { path = "../../../../TaceoLabs/nullifier-oracle-service/eddsa-babyjubjub"}
serde_json = { workspace = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
hex = "0.4"
oprf-client = { path = "../../../../TaceoLabs/nullifier-oracle-service/oprf-client"}
oprf-types = { path = "../../../../TaceoLabs/nullifier-oracle-service/oprf-types"}
oprf-core = { path = "../../../../TaceoLabs/nullifier-oracle-service/oprf-core"}
circom-types = { git = "https://github.com/TaceoLabs/co-snarks.git", default-features = false }
ark-serde-compat = { path = "../../../../TaceoLabs/nullifier-oracle-service/ark-serde-compat"}
poseidon2 = { path = "../../../../TaceoLabs/nullifier-oracle-service/poseidon2"}
rand = "0.8.5"
ark-ec = "0.5.0"
ark-ff = "0.5.0"
uuid = "1.14.0"
witness = { git = "https://github.com/TaceoLabs/circom-witness-rs.git", branch = "dev" }
ark-bn254 = "0.5.0"
eyre = "0.6.12"
groth16 = { git = "https://github.com/TaceoLabs/groth16.git" }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tracing-subscriber = { workspace = true }