[package]
name = "world-id-core"
description = "Reference SDK for interacting with the World ID Protocol. For authenticator providers, issuers and RPs."
publish = true
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
rust-version.workspace = true
repository.workspace = true
include = [
    "src/**/*",
    "bin/**/*",
    "tests/**/*",
    "../../contracts/abi/*",
    "build.rs",
    "Cargo.toml",
    "README.md",
]

[[bin]]
name = "authenticator"
path = "bin/authenticator.rs"
required-features = ["authenticator", "cli", "embed-zkeys"]

[[bin]]
name = "issuer"
path = "bin/issuer.rs"
required-features = ["issuer", "cli"]

[dependencies]
alloy = { workspace = true, features = ["sol-types"] }
ark-babyjubjub = { workspace = true }
ark-bn254 = { workspace = true }
backon = { workspace = true, optional = true, features = ["tokio-sleep"] }
poseidon2 = { workspace = true }
ark-ff = { workspace = true }
ark-serialize = { workspace = true }
ark-groth16 = { workspace = true }
anyhow = { workspace = true }
chrono = "0.4"
ciborium = "0.2"
hex = { workspace = true }
ruint = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
eddsa-babyjubjub = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = [
    "rt-multi-thread",
    "macros",
    "net",
], optional = true }
circom-types = { workspace = true, optional = true }
rand = { workspace = true }
ark-ec = { workspace = true }
eyre = { workspace = true }
reqwest = { workspace = true, optional = true }
secrecy = { version = "0.10", optional = true }
strum = { workspace = true }
world-id-primitives = { workspace = true }
utoipa = { workspace = true, optional = true }
groth16-material = { workspace = true, optional = true }
taceo-oprf = { workspace = true, features = ["client"], optional = true }
k256 = { workspace = true, features = ["ecdsa", "serde"] }
rustls = { workspace = true, optional = true }
webpki-roots = { workspace = true, optional = true }
axum = { workspace = true, optional = true }
zeroize = { workspace = true, optional = true }

# Internal
world-id-issuer = { workspace = true, optional = true }
world-id-signer = { workspace = true, optional = true }
world-id-credential = { workspace = true, optional = true }

[features]
default = ["authenticator", "embed-zkeys"]

authenticator = [
    "alloy/contract",
    "alloy/signer-local",
    "alloy/reqwest-rustls-tls",
    "alloy/rpc",
    "dep:backon",
    "dep:circom-types",
    "dep:reqwest",
    "dep:secrecy",
    "dep:groth16-material",
    "taceo-oprf/client",
    "dep:rustls",
    "dep:webpki-roots",
    "dep:axum",
    "dep:tokio",
    "dep:world-id-credential",
    "dep:world-id-signer",
    "dep:zeroize",
]

embed-zkeys = []
# Compress the embedded zkeys to reduce binary size
compress-zkeys = ["embed-zkeys"]

issuer = [
    "dep:world-id-issuer",
    "dep:world-id-credential",
    "dep:world-id-signer",
    "dep:secrecy",
]

rp = ["dep:taceo-oprf", "alloy/signers"]

cli = []

# OpenAPI/Swagger docs
openapi = ["dep:utoipa"]

[build-dependencies]
eyre = { workspace = true }
reqwest = { workspace = true, features = ["blocking"] }
ark-serialize = { workspace = true }
circom-types = { workspace = true, features = ["bn254", "groth16", "zkey"] }
rayon = "1.10"

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]

[dev-dependencies]
alloy-node-bindings = "1"
alloy = { workspace = true, features = ["rpc-types"] }
test-utils = { path = "../test-utils" }
world-id-gateway = { path = "../../services/gateway" }
axum = { workspace = true, features = ["macros", "json"] }
mockito = "1.6"
taceo-oprf = { workspace = true, features = ["full"] }
taceo-oprf-test-utils = { workspace = true }
