[package]
name = "world-id-core"
description = "Reference SDK for interacting with the World ID Protocol. For authenticator providers, issuers and RPs."
publish = true
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
rust-version.workspace = true
repository.workspace = true
include = ["src/**/*", "bin/**/*", "tests/**/*", "Cargo.toml", "README.md"]

[[example]]
name = "authenticator"
path = "examples/authenticator.rs"
required-features = ["authenticator", "embed-zkeys"]

[[example]]
name = "issuer"
path = "examples/issuer.rs"
required-features = ["issuer"]

[features]
default = ["authenticator", "embed-zkeys"]

authenticator = [
    "dep:world-id-proof",
    "dep:world-id-authenticator",
]

# Embed zkeys into binary (requires authenticator feature)
embed-zkeys = ["authenticator", "world-id-proof/embed-zkeys"]
# Compress the embedded zkeys to reduce binary size (ARK point compression)
compress-zkeys = ["authenticator", "embed-zkeys", "world-id-proof/compress-zkeys"]
# Compress the tar archive with zstd
zstd-compress-zkeys = ["authenticator", "embed-zkeys", "world-id-proof/zstd-compress-zkeys"]

issuer = [
    "dep:world-id-issuer",
]

rp = []

[dependencies]
eddsa-babyjubjub = { workspace = true }

# Internal
world-id-issuer = { workspace = true, optional = true }
world-id-proof = { workspace = true, optional = true }
world-id-authenticator = { workspace = true, optional = true }
world-id-primitives = { workspace = true }

[dev-dependencies]
alloy = { workspace = true }
reqwest = { workspace = true }
world-id-test-utils = { path = "../test-utils" }
world-id-gateway = { path = "../../services/gateway" }
taceo-oprf-test-utils = { workspace = true }
taceo-oprf = { workspace = true, features = ["types"] }
backon = { workspace = true }
chrono = { workspace = true }
hex = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "net"] }
serde_json = { workspace = true }
rand = { workspace = true }
eyre = { workspace = true }
rustls = { workspace = true }
