[package]
name = "world-id-credential"
description = "World ID Credential crate"
publish = true
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
rust-version.workspace = true
repository.workspace = true
include = ["src/**/*", "tests/**/*", "Cargo.toml", "README.md"]

[dependencies]
alloy = { workspace = true, features = ["sol-types"] }
ark-babyjubjub = { workspace = true }
ark-bn254 = { workspace = true }
poseidon2 = { workspace = true }
ark-ff = { workspace = true }
ark-serialize = { workspace = true }
hex = { workspace = true }
ruint = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
eddsa-babyjubjub = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "net"] }
circom-types = { workspace = true }
rand = { workspace = true }
ark-ec = { workspace = true }
eyre = { workspace = true }
strum = { workspace = true }
world-id-primitives = { workspace = true }
utoipa = { workspace = true, optional = true }
groth16-material = { workspace = true, features = ["circom"] }
taceo-oprf-core = { workspace = true }
taceo-oprf-types = { workspace = true }
k256 = { workspace = true, features = ["ecdsa", "serde"] }
