[package]
name = "idkit-core"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Core request/response models and action encoding for IDKit"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
base64 = "0.22"
time = { version = "0.3", features = ["parsing", "formatting", "serde", "macros"] }

[dev-dependencies]
serde_json = { workspace = true }

