[package]
name = "oprf-client"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
ark-babyjubjub = { workspace = true }
ark-ec = { workspace = true }
eyre.workspace = true
futures = { version = "0.3" }
groth16 = { workspace = true }
k256 = { workspace = true, features = ["ecdsa", "serde"] }
oprf-core = { workspace = true }
oprf-types = { workspace = true }
oprf-world-types = { workspace = true }
oprf-zk = { workspace = true }
rand.workspace = true
reqwest = { workspace = true }
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, optional = true, features = [
    "net",
    "rt-multi-thread",
    "signal",
    "sync",
    "time",
    "tokio-macros",
] }
tracing.workspace = true
uuid = { workspace = true, features = ["serde", "v4"] }

[features]
default = ["tokio"]
tokio = ["dep:tokio"]
embed-zkeys = []

[dev-dependencies]
alloy = { workspace = true, default-features = false, features = [
    "contract",
    "json",
    "reqwest",
    "rpc",
    "rpc-types",
    "signer-local",
    "sol-types",
] }
ark-ff = { workspace = true }
ark-serialize = { workspace = true }
eddsa-babyjubjub = { workspace = true }
poseidon2 = { workspace = true }
ruint = { workspace = true }
test-utils = { path = "../test-utils" }
world-id-core = { path = "../core", features = ["issuer"] }
