[package]
name = "oprf-client"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
ark-babyjubjub = { workspace = true }
ark-ec = { workspace = true }
eyre.workspace = true
futures = { version = "0.3" }
groth16 = { workspace = true }
k256 = { workspace = true, features = ["ecdsa", "serde"] }
oprf-core = { workspace = true }
oprf-types = { workspace = true }
oprf-world-types = { workspace = true }
oprf-zk = { workspace = true }
rand.workspace = true
reqwest = { workspace = true }
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, optional = true, default-features = false }
uuid = { workspace = true, features = ["serde", "v4"] }
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { workspace = true, features = ["rustls-tls"] }
tokio = { workspace = true, optional = true, features = [
    "macros",
    "net",
    "rt-multi-thread",
    "signal",
    "sync",
    "time",
] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
reqwest = { workspace = true }
tokio = { workspace = true, optional = true, features = [
    "macros",
    "rt",
    "time",
] }
tracing.workspace = true

[features]
default = ["tokio"]
tokio = ["dep:tokio"]
embed-zkeys = []

[dev-dependencies]
alloy = { workspace = true, default-features = false, features = [
    "contract",
    "json",
    "reqwest",
    "rpc",
    "rpc-types",
    "signer-local",
    "sol-types",
] }
ark-ff = { workspace = true }
ark-serialize = { workspace = true }
eddsa-babyjubjub = { workspace = true }
poseidon2 = { workspace = true }
ruint = { workspace = true }
test-utils = { path = "../test-utils" }
world-id-core = { path = "../core", features = ["issuer"] }
