[package]
name = "oprf-client"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
ark-babyjubjub = { workspace = true }
ark-ec = { workspace = true }
circom-types = { workspace = true, features = [
  "bn254",
  "groth16",
  "proof",
  "verification-key"
] }
eyre.workspace = true
futures.workspace = true
groth16-material = { workspace = true, features = ["circom"] }
k256 = { workspace = true, features = ["ecdsa", "serde"] }
oprf-core = { workspace = true }
oprf-types = { workspace = true }
oprf-world-types = { workspace = true }
poseidon2 = { workspace = true }
rand.workspace = true
reqwest = { workspace = true }
thiserror.workspace = true
tokio = { workspace = true, features = [
  "net",
  "rt-multi-thread",
  "signal",
  "sync",
  "time",
  "tokio-macros"
], optional = true }
tracing.workspace = true
uuid = { workspace = true, features = ["serde", "v4"] }
eddsa-babyjubjub = { workspace = true }
world-id-primitives = { workspace = true }

[dev-dependencies]
alloy = { workspace = true, default-features = false, features = [
    "contract",
    "json",
    "reqwest",
    "rpc",
    "rpc-types",
    "signer-local",
    "sol-types",
] }
ark-ff = { workspace = true }
ark-serialize = { workspace = true }
eddsa-babyjubjub = { workspace = true }
poseidon2 = { workspace = true }
ruint = { workspace = true }
test-utils = { path = "../test-utils" }
world-id-core = { path = "../core", features = ["issuer"] }

[features]
default = ["embed-zkeys", "tokio"]
embed-zkeys = []
tokio = ["dep:tokio"]
