[package]
name = "world-id-oprf-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
ark-babyjubjub = { workspace = true }
ark-ec = { workspace = true }
ark-ff = { workspace = true }
ark-serde-compat = { workspace = true }
eddsa-babyjubjub = { workspace = true }
itertools = { workspace = true }
num-bigint.workspace = true
poseidon2 = { workspace = true }
rand_chacha.workspace = true
rand.workspace = true
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
zeroize = { workspace = true, features = ["derive"] }
subtle = "2"

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "oprf"
harness = false
