[package]
name = "oprf-world-types"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true

[dependencies]
alloy = { workspace = true }
ark-babyjubjub = { workspace = true }
ark-ec.workspace = true
ark-ff.workspace = true
ark-serde-compat = { workspace = true }
eddsa-babyjubjub = { workspace = true }
k256 = { workspace = true, features = ["ecdsa", "serde"] }
oprf-core = { workspace = true }
oprf-zk = { workspace = true }
serde = { workspace = true, features = ["derive"] }
uuid = { workspace = true, features = ["serde", "v4"] }
